# research-malware

./: README.md
Synapsys-0.4/: README  Synapsys.c
adore-ng0.42/: Changelog  LICENSE  Makefile.gen  README  TODO  adore.c  adore.h  ava.c  configure  dummy.c  libinvisible.c
adore-ng0.42/CVS/: Entries  Tag
enyelkm.en.v1.1/: DESCRIPTION.txt  Makefile  README.txt  Readme  base.c  config.h  connect.c  kill.c  ls.c  ls.h  read.c  read.h  remoto.c  remoto.h
kis-0.9/: USAGE.TXT
kis-0.9/kis_client-0.9/: Kis_client.prj  Makefile.am  Makefile.in  configure  configure.in
kis-0.9/kis_client-0.9/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c  support.h
kis-0.9/kis_server/: DISCLAIMER  Makefile  builder.c  kis.c  loader.c  option.h  plugin.c  user_execve.c
knark-2.4.3/: Makefile  README.cyberwinds  hidef  mkmod  nethide  output  rootme  syscall.c  syscall_table.txt  taskhack
knark-2.4.3/src/: author_banner.c  knark.c  knark.h  modhide.c  taskhack.c
suterusu/: README.md
