## Process this file with automake to produce Makefile.in
## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjtua Project configuration

SUBDIRS = src

kis_clientdocdir = ${prefix}/doc/kis_client
kis_clientdoc_DATA = \
	README\
	COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS\
	TODO

EXTRA_DIST = Kis_client.prj $(kis_clientdoc_DATA)

